[package]
name = "cdn-exporter-polars"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cdn-exporter-polars"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2"
polars = { version = "0.46", features = ["lazy", "regex", "strings", "temporal", "dtype-datetime", "json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
